--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ let currentRole = null;
 let map;
 const credentials = { admin: 'admin123', operator: 'operator123', viewer: 'viewer123' };
 const gullyData = [];
-const summaryCounts = { Clear: 0, Broken: 0, Remediation: 0 , Replacement: 0};
+const summaryCounts = { Clear: 0, Broken: 0, Remediation: 0 , Replacement: 0, Unmarked: 0, Expired: 0};
 const storageKey = 'gully_inspections';
 
 function login() {
