--- a/index.html
+++ b/index.html
@@ -26,11 +26,8 @@ function resetMap() {
   gullyData.forEach(({ marker }) => {
     map.removeLayer(marker);
   });
-  gullyData.length = 0;
-  for (const key in summaryCounts) {
-    summaryCounts[key] = 0;
-  }
-  updateSummary();
+    updateSummary();
+        saveToLocalStorage();
   localStorage.removeItem(storageKey);
 }
 
@@ -70,6 +67,7 @@ function enableDeleteMode() {
         gullyData.splice(index, 1);
         updateSummary();
         saveToLocalStorage();
+        saveToLocalStorage();
         deleteMode = false;
       }
       marker.off('click', onDeleteClick); // clean up
@@ -98,11 +96,8 @@ function resetMap() {
   gullyData.forEach(({ marker }) => {
     map.removeLayer(marker);
   });
-  gullyData.length = 0;
-  for (const key in summaryCounts) {
-    summaryCounts[key] = 0;
-  }
-  updateSummary();
+    updateSummary();
+        saveToLocalStorage();
   localStorage.removeItem(storageKey);
 }
 
@@ -141,6 +136,7 @@ function enableDeleteMode() {
         map.removeLayer(marker);
         gullyData.splice(index, 1);
         updateSummary();
+        saveToLocalStorage();
         saveToLocalStorage();
         deleteMode = false;
       }
@@ -280,16 +276,13 @@ function login() {
           }
         });
         updateSummary();
+        saveToLocalStorage();
       };
       reader.readAsText(file);
     });
 
     
-    gullyData.length = 0;
-    for (const key in summaryCounts) {
-      summaryCounts[key] = 0;
-    }
-
+    
     loadFromLocalStorage();
   } else {
     document.getElementById("loginError").innerText = 'Invalid username or password';
@@ -332,7 +325,14 @@ function updateSummary() {
      <span style='color:gray;'>⬤</span> Expired: ${counts.Expired} - Last inspection over 12 months<br>
      <span style='color:lightgray;'>⬤</span> Unmarked: ${counts.Unmarked} - No inspection data yet`;
 }
-
+<br>
+     <span style='color:yellow;'>⬤</span> Replacement: ${summaryCounts.Replacement} - Asset to be replaced<br>
+     <span style='color:blue;'>⬤</span> Clear: ${summaryCounts.Clear} - Functioning as intended<br>
+     <span style='color:orange;'>⬤</span> Broken: ${summaryCounts.Broken} - Requires urgent repair<br>
+     <span style='color:red;'>⬤</span> Remediation: ${summaryCounts.Remediation} - Needs maintenance intervention<br>
+     <span style='color:gray;'>⬤</span> Expired: ${summaryCounts.Expired} - Last inspection over 12 months<br>
+     <span style='color:lightgray;'>⬤</span> Unmarked: ${summaryCounts.Unmarked} - No inspection data yet`;
+}
 
 
 function filterByStatus() {
@@ -353,28 +353,11 @@ function saveToLocalStorage() {
   localStorage.setItem(storageKey, JSON.stringify(simplified));
 }
 
-
 function loadFromLocalStorage() {
   const saved = localStorage.getItem(storageKey);
   if (!saved) return;
-
-  // Clear previous gullies from map and gullyData
-  gullyData.forEach(({ marker }) => {
-    map.removeLayer(marker);
-  });
-  gullyData.length = 0;
-
-  const entries = JSON.parse(saved);
-  entries.forEach(entry => {
-    const marker = L.circleMarker(entry.latlng, { radius: 6, color: 'gray', fillColor: 'gray', fillOpacity: 1 }).addTo(map);
-    const status = entry.dataLog.length ? entry.dataLog[entry.dataLog.length - 1].status : 'Unmarked';
-    gullyData.push({ marker, dataLog: entry.dataLog, status });
-    marker.on('click', () => showPopup(marker, entry.latlng, entry.dataLog));
-  });
-
-  updateSummary();
-}
-).addTo(map);
+  JSON.parse(saved).forEach(entry => {
+    const marker = L.marker(entry.latlng, { icon: createDot('gray') }).addTo(map);
     const dataLog = entry.dataLog || [];
     let lastStatus = 'Unmarked';
 
@@ -400,6 +383,7 @@ function loadFromLocalStorage() {
     gullyData.push({ marker, dataLog, status: lastStatus });
   });
   updateSummary();
+        saveToLocalStorage();
 }
 
 function showPopup(marker, latlng, dataLog) {
@@ -491,6 +475,7 @@ function showPopup(marker, latlng, dataLog) {
     dataLog.push({ lat: latlng.lat, lng: latlng.lng, name: gullyName, date, status, comment, photo: photoData });
       saveToLocalStorage();
       updateSummary();
+        saveToLocalStorage();
     marker.closePopup();
     };
     if (photoFile) {
@@ -548,11 +533,8 @@ function resetMap() {
   gullyData.forEach(({ marker }) => {
     map.removeLayer(marker);
   });
-  gullyData.length = 0;
-  for (const key in summaryCounts) {
-    summaryCounts[key] = 0;
-  }
-  updateSummary();
+    updateSummary();
+        saveToLocalStorage();
   localStorage.removeItem(storageKey);
 }
 
@@ -591,6 +573,7 @@ function enableDeleteMode() {
         map.removeLayer(marker);
         gullyData.splice(index, 1);
         updateSummary();
+        saveToLocalStorage();
         saveToLocalStorage();
         deleteMode = false;
       }
