--- a/index.html
+++ b/index.html
@@ -2,35 +2,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
   <meta charset="utf-8">
-  <title>Gully Inspection Map - Firebase Connected</title>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
-  <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
-    #status { margin-top: 20px; }
-  </style>
-</head>
-<body>
-  <h2>✅ Firebase Deployment Test</h2>
-  <p>This page is connected to Firebase Realtime Database at:</p>
-  <code>https://gullytest3-default-rtdb.europe-west1.firebasedatabase.app</code><br><br>
-  <button onclick="writeGully()">Save Sample Gully to Firebase</button>
-  <div id="status">Status: Not submitted</div>
-
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyBsteq-tHQdiDcRk5UBg52AwAxpVcq67cw",
-      authDomain: "gullytest3.firebaseapp.com",
-      databaseURL: "https://gullytest3-default-rtdb.europe-west1.firebasedatabase.app",
-      projectId: "gullytest3",
-      storageBucket: "gullytest3.firebasestorage.app",
-      messagingSenderId: "876083677912",
-      appId: "1:876083677912:web:065de0c7cca446b78f65ad"
-    };
-
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
+  <title>Gully Inspection Map (With Login)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet/dist/leaflet.js">
 function logout() {
   location.reload();
